--- a/java-server/pom.xml
+++ b/java-server/pom.xml
@@ -21,6 +21,16 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	 <groupId>org.eclipse.persistence</groupId>
+	 <artifactId>org.eclipse.persistence.moxy</artifactId>
+	 <version>2.6.3</version>
+ </dependency>
+     <dependency>
+	 <groupId>javax.xml.bind</groupId>
+	 <artifactId>jaxb-api</artifactId>
+	 <version>2.2.11</version>
+ </dependency>
 
 	</dependencies>
 
