--- a/java-server/pom.xml
+++ b/java-server/pom.xml
@@ -31,6 +31,17 @@
 	 <artifactId>jaxb-api</artifactId>
 	 <version>2.2.11</version>
  </dependency>
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>6.0.2</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.moxy -->
+<dependency>
+    <groupId>org.eclipse.persistence</groupId>
+    <artifactId>org.eclipse.persistence.moxy</artifactId>
+    <version>2.5.0</version>
+</dependency>
 
 	</dependencies>
 
